fixing invisible error

--- a/CSS_advanced/styles/3-style.css
+++ b/CSS_advanced/styles/3-style.css
@@ -2,7 +2,7 @@ html{
     scroll-behavior: smooth;
 }
 body, a{
-    color:  var(--text-color);    
+    color: var(--text-color);
 }
 .visually-hidden{
     display: none;
@@ -12,10 +12,10 @@ body, a{
     color: var(--color-primary);
 }
 :root{
-    color-primary:#d73953;
-    color-black:#090909;
-    color-white:#ffffff;
-    color-light-grey:#f3f3f3;
-    color-dark-grey:#353535;
+    --color-primary:#d73953;
+    --color-black:#090909;
+    --color-white:#ffffff;
+    --color-light-grey:#f3f3f3;
+    --color-dark-grey:#353535;
     --text-color:var(--color-black);
 }
